--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,8 +1,10 @@
 <table class="table table-striped table-bordered">
   <thead>
     <th>description</th>
+    <th>max_occupants<th>
+    <th>rooms</th>
     <th>rent</th>
-    <th>status</th>
+    <th>availability</th>
     <th>city</th>
     <th>address</th>
   </thead>
@@ -10,8 +12,10 @@
     <% @listings.each do |listing| %>
       <tr>
         <td><%= listing.description %></td>
+        <td><%= listing.max_occupants %></td>
+        <td><%= listing.rooms %></td>
         <td><%= listing.rent %></td>
-        <td><%= listing.status %></td>
+        <td><%= listing.availability %></td>
         <td><%= listing.city %></td>
         <td><%= listing.address %></td>
       </tr>
