--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -59,7 +59,14 @@
       <div class="panel panel-primary">
         <div class="panel-heading"><%= listing.city %></div>
         <div class="panel-body"><img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></div>
-        <div class="panel-footer"><%= listing.rent %></div>
+        <div class="panel-footer clearfix"><%= listing.rent %> 
+          <div class="btn-group pull-right">
+          <a href="#" class="btn btn-default btn-sm">## New</a>
+          <a href="#" class="btn btn-default btn-sm">## Edit</a>
+          <a href="#" class="btn btn-default btn-sm">## Delete</a>
+
+        </div>
+        </div>
       </div>
     </div>
     <div class="col-sm-4">
