--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -1,2 +1,35 @@
 <h1>Listings#new</h1>
 <p>Find me in app/views/listings/new.html.erb</p>
+
+
+<%= form_for @listing do |f| %> 
+<%= f.label :description %>
+<div class="input-xlarge">
+<%= f.text_area :description %> 
+</div>
+<%= f.label :city %>
+<div class="input-small">
+<%= f.text_field :city %> 
+</div>
+<%= f.label :address %>
+<div class="input-xlarge">
+<%= f.text_area :address %> 
+</div>
+<%= f.label :max_occupants %>
+<div class="input-small">
+<%= f.text_field :max_occupants %> 
+</div>
+<%= f.label :rooms %>
+<div class="input-small">
+<%= f.text_field :rooms %> 
+</div>
+<%= f.label :rent %>
+<div class="input-small">
+<%= f.text_field :rent %> 
+</div>
+<div class="form-actions">
+<div class="btn btn-primary">
+<%= f.submit %>
+</div>
+</div> 
+<% end %>
