--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -1,3 +1,96 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>jQuery UI Datepicker - Select a Date Range</title>
+  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+  <link rel="stylesheet" href="/resources/demos/style.css">
+  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+  <script>
+  $( function() {
+    var dateFormat = "mm/dd/yy",
+      from = $( "#from" )
+        .datepicker({
+          defaultDate: "+1w",
+          changeMonth: true,
+          numberOfMonths: 3
+        })
+        .on( "change", function() {
+          to.datepicker( "option", "minDate", getDate( this ) );
+        }),
+      to = $( "#to" ).datepicker({
+        defaultDate: "+1w",
+        changeMonth: true,
+        numberOfMonths: 3
+      })
+      .on( "change", function() {
+        from.datepicker( "option", "maxDate", getDate( this ) );
+      });
+ 
+    function getDate( element ) {
+      var date;
+      try {
+        date = $.datepicker.parseDate( dateFormat, element.value );
+      } catch( error ) {
+        date = null;
+      }
+ 
+      return date;
+    }
+  } );
+  </script>
+</head>
+<body>
+ 
+
+ <%= form_for :listing, url: listing_path(@listing), method: :get do |g| %>
+
 <%= image_tag(@listing.avatars[0].large.url) if @listing.avatars[0] %>
 
+
+<p>
+  <b>Address:</b>
+  <%= @listing.address  %>
+</p>
+
+<p>
+  <b>City:</b>
+  <%= @listing.city %>
+</p>
+
+<p>
+<b>Rent: </b>
+<%= @listing.rent %>
+</p>
+
+<p>
+  <b>Available From:</b>
+  <%= @listing.availability %>
+</p>
+
+<p>
+  <b>Maximum Guests:</b>
+  <%= @listing.max_occupants %>
+</p>
+
+<p>
+  <b>Rooms:</b>
+  <%= @listing.rooms %>
+</p>
+
+<% end %>
+
+<% if @listing.user_id == current_user.id %>
+<%= link_to 'Edit', edit_listing_path(listing) %>
+
+<% end %>
+
+<label for="from">From</label>
+<input type="text" id="from" name="from">
+<label for="to">to</label>
+<input type="text" id="to" name="to">
  
+</body>
+</html>
