--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,12 @@
+<!DOCTYPE>
+<html>
 
+<div class="jumbotron">
+  <div class="container text-center">
+    <h1>PairBNB</h1>
+    <p>Your global home</p>
+  </div>
+</div>
 
 <form class="form-horizontal" action="/listings" method="get">
 <fieldset>
@@ -6,32 +14,58 @@
 <!-- Form Name -->
 <legend>Search</legend>
 
+<!-- PgSearch -->
+<div class="form-group">
+  <label class="col-md-4 control-label" for="location">Description</label>  
+  <div class="col-md-4">
+  <input id="description" name="description" type="text" placeholder="Description" class="form-control input-md"> 
+  </div>
+</div>
+
 <!-- Text input-->
 <div class="form-group">
   <label class="col-md-4 control-label" for="location">Location</label>  
   <div class="col-md-4">
-  <input id="city" name="city" type="text" placeholder="city" class="form-control input-md"> 
+  <input id="city" name="city" type="text" placeholder="City" class="form-control input-md"> 
   </div>
 </div>
 
 <!-- Select Basic -->
 <div class="form-group">
-  <label class="col-md-4 control-label" for="radius">Search radius</label>
+  <label class="col-md-4 control-label">Max Occupants</label>
   <div class="col-md-4">
-    <select id="radius" name="radius" class="form-control">
-      <option value="1">Option one</option>
-      <option value="2">Option two</option>
+    <select id="max_occupants" name="max_occupants" class="form-control">
+      <option></option>
+      <option>1</option>
+      <option>2</option>
+      <option>3</option>
+      <option>4</option>
+      <option>5</option>
+      <option>6</option>
+      <option>7</option>
+      <option>8</option>
+      <option>9</option>
+      <option>10</option>
     </select>
   </div>
 </div>
 
 <!-- Select Basic -->
 <div class="form-group">
-  <label class="col-md-4 control-label" for="property_type">Property type</label>
+  <label class="col-md-4 control-label">Rooms</label>
   <div class="col-md-4">
-    <select id="property_type" name="property_type" class="form-control">
-      <option value="1">Option one</option>
-      <option value="2">Option two</option>
+    <select id="rooms" name="rooms" class="form-control">
+      <option></option>
+      <option>1</option>
+      <option>2</option>
+      <option>3</option>
+      <option>4</option>
+      <option>5</option>
+      <option>6</option>
+      <option>7</option>
+      <option>8</option>
+      <option>9</option>
+      <option>10</option>
     </select>
   </div>
 </div>
@@ -41,6 +75,7 @@
   <label class="col-md-4 control-label">Price range</label>
   <div class="col-md-2">
     <select id="rent" name="minrent" class="form-control">
+      <option></option>
       <option>50</option>
       <option>100</option>
       <option>200</option>
@@ -56,6 +91,7 @@
   <label class="col-md-4 control-label"></label>
   <div class="col-md-2">
     <select id="rent" name="maxrent" class="form-control">
+      <option></option>
       <option>50</option>
       <option>100</option>
       <option>200</option>
@@ -77,6 +113,6 @@
 
 </fieldset>
 </form>
-
+<html>
 
 
