--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -10,6 +10,10 @@
 
 <%= image_tag(@listing.avatars[0].large.url) if @listing.avatars[0] %>
 
+<p>
+  <b>Description:</b>
+  <%= @listing.description %>
+</p>
 
 <p>
   <b>Address:</b>
