altering listing view

--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -33,7 +33,7 @@
     <p>Your global home</p>
   </div>
 </div>
-
+<%byebug%>
 <div><% @listings.each do |listing| %>
   <div class="btn-group-vertical pull-left">
     <a href="#" class="btn btn-primary btn-lg"></a>
