--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,17 @@
           <ul class="nav navbar-nav foo" id="menu">
             <p class="navbar-text">Pick an option:</p>
             <li class="active"><a href="/">Home</a></li>
-            <li><a href="/listings">Listings</a></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Listings<b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><a href="/listings">Listings</a></li>
+                <li><a href="/listings/new">New</a></li>
+                <% if %>
+                <li><a href="/users/<%= current_user.id %>/listings">My Listings</a></li>
+                <% end %>
+               
+              </ul>
+            </li>
             <li><a href="/landlord">Landlord</a></li> 
             <li>
               <a href="/contact">
